# bookstore

./: .coverage  .gitignore  db.sqlite3  mypy.ini  pyproject.toml  requirements.txt  sh.exe.stackdump  ssh.exe.stackdump
api/: models.py
bookstore/: settings.py  urls.py
category/: models.py
category/migrations/: 0001_initial.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: factories.py  test_serializers.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0003_remove_product_category_product_category.py  0004_remove_product_category_product_category.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/: factories.py  test_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
product_app/: apps.py
product_app/migrations/: 0001_initial.py
product_app/models/: product.py
product_app/serializers/: category_serializer.py  product_serializer.py
product_app/tests/: factories.py  test_serializers.py
